crates/piper-protocol/tests/ui/struct_literal.stderr
error[E0451]: fields `id`, `data` and `timestamp_us` of struct `PiperFrame` are private
 --> tests/ui/struct_literal.rs:5:9
  |
4 |     let _ = piper_protocol::frame::PiperFrame {
  |             --------------------------------- in this type
5 |         id,
  |         ^^ private field
6 |         data,
  |         ^^^^ private field
7 |         timestamp_us: 0,
  |         ^^^^^^^^^^^^ private field
